feat: expand compatibility for JustAFK 1.0.1
Prepare JustAFK 1.0.1 for a wider range of Minecraft server versions.

- Target Java 8 bytecode while keeping Paper 26.2 as the primary API
- Add compatibility compilation against Spigot 1.8.8
- Verify bytecode parity between Paper 26.2 and Spigot 1.8.8 builds
- Replace newer Java language features without changing AFK behavior
- Load YAML comment support reflectively on older Bukkit APIs
- Add compatibility and regression tests
- Update plugin metadata and documentation
- Keep the plugin free of runtime dependencies